refactor: unified version & jwt service