@@ -1,6 +1,6 @@
 package me.boot.util;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import javax.annotation.Resource;
@@ -39,7 +39,7 @@ public class LockUtil {
 //      }
             // 脚本解锁 原子操作
             String script = "if redis.call('get',KEYS[1]) == ARGV[1] then return redis.call('del',KEYS[1]) else return 0 end";
-            redisTemplate.execute(new DefaultRedisScript<>(script, Long.class), List.of("lock"),
+            redisTemplate.execute(new DefaultRedisScript<>(script, Long.class), Collections.singletonList("lock"),
                 uuid);
 
 
